@@ -1,5 +1,6 @@
 - partionning:
   o GPT: prevent geometry issue on last partition (mga#18666, mga#17796)
+  o restrict fdisk -l output to usefull disks
 - recognize new kernel-4.7 drivers
 - try to get patch from ext[2-4] removable media instead of just ext2
 
